Delete trash, changes in file's names, treeController

--- a/FileSystem_Application/nbproject/project.properties
+++ b/FileSystem_Application/nbproject/project.properties
@@ -32,11 +32,13 @@ dist.jar=${dist.dir}/FileSystem_Application.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-simple-1.1.1.jar=..\\..\\..\\..\\..\\..\\..\\..\\Downloads\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.jar=D:\\JsonCreatorJava\\JsonCreator\\json-simple-1.1.jar\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
